--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Telesistemas SRL</title>
+    <title>Telesistema SRL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
